@@ -3,7 +3,7 @@
 #
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(ypserv/ypserv.c)
-AM_INIT_AUTOMAKE("ypserv", 2.0)
+AM_INIT_AUTOMAKE("ypserv", 2.0.1)
 AM_CONFIG_HEADER(config.h)
 AC_PREFIX_DEFAULT(/usr)
 
