@@ -1,3 +1,8 @@
+2001-08-11  Thorsten Kukuk  <kukuk@suse.de>
+
+	* ypserv/ypserv.c (main): Fix missing format string, only
+	  change database directory if we are in debug mode.
+
 2001-08-07  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.0
